--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,44 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="280dp"
-        android:layout_height="100dp"
-        android:textSize="40sp"
-        android:textColor="#00B0FF"
-        
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/tv_hello_world"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_weight="1">
+        <TextView
+            android:text="@string/hello_world"
+            android:layout_width="280dp"
+            android:layout_height="100dp"
+            android:textSize="40sp"
+            android:textColor="#00B0FF"
+
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/tv_hello_world"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="800">
+
+        <ImageView
+            android:src="@drawable/my"
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitStart"/>
+    </LinearLayout>
+
 
     <!--<TextView-->
         <!--android:text="@string/how_are_you"-->
@@ -23,23 +47,39 @@
         <!--android:id="@+id/tv_hello_world"-->
         <!--/>-->
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1">
     <Button
+        android:layout_weight="1"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:id="@+id/button_1"
         android:text="@string/say_hello"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_hello_world"
         android:textColor="#FF5722"
-        android:background="#9E9E9E"
-
-
+        android:background="#01579B"
+        android:layout_margin="10dp"
         />
+        <Button
+            android:layout_weight="1"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:id="@+id/button_2"
+            android:text="@string/say_hello"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_hello_world"
+            android:textColor="#FF5722"
+            android:background="#01579B"
+            android:layout_margin="10dp"
+            />
 
-    <ImageView
-        android:src="@drawable/MyImage"
-        android:layout_below="@id/button_1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+
+</LinearLayout>
         <!--android:layout_below="@+id/"/>-->
-</RelativeLayout>
+</LinearLayout>
